--- a/css/style.css
+++ b/css/style.css
@@ -213,14 +213,15 @@ p {
     align-items: center;
     justify-content: center;
     text-align: left;
-    padding: 50px;
     position: relative;
     overflow: hidden;
   }
   
   .hero-content {
-    flex: 1; /* Allow the content to take up available space */
+    max-width: 1200px;
+    flex: 1; 
     padding: 20px;
+    z-index: 1;
   }
 
   .hero-content h1 {
@@ -235,24 +236,7 @@ p {
     font-size: 18px;
     line-height: 2; 
     margin-top: 0;
-    margin-bottom: 60px;
     max-width: 600px;
-}
-
-.hero-images {
-  display: none; /* Set to flexbox for image layout */
-  flex-wrap: wrap; /* Allows images to wrap to the next line */
-  justify-content: space-around; /* Evenly distributes images */
-  align-items: flex-start; /* Align images at the top */
-  position: relative; /* Position relative for further styling */
-  width: 50%; /* Make sure this takes half the width */
-  height: 100%; /* Full height of the container */
-}
-
-.hero-images img {
-  margin: 10px; /* Add margin around images to avoid overlap */
-  max-width: 50%; /* Control size of images, can be adjusted */
-  transition: transform 0.5s ease; /* Smooth transitions for hover effect */
 }
   
   /* Cards Section */
@@ -260,7 +244,7 @@ p {
     max-width: 1200px;
     margin: 0 auto;
     padding: 100px 30px;
-  }
+}
   
   .section-intro {
     grid-column: span 3;
@@ -435,7 +419,7 @@ p {
 @media only screen and (max-width: 800px) {
 
   header {
-    width: 80%;
+    width: 90%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -542,6 +526,7 @@ p {
     font-size: xx-large;
 
   }
+
 }
 
 /* Phones: Single column */
@@ -554,13 +539,13 @@ p {
   header .logo img {
     width: 35px;
   }
-
-  header .site-name {
-    font-size: 16px;
-  }
   
   h1 {
     font-size: 28px;
+  }
+
+  .hero-content {
+    max-width: 90%;
   }
 
   .hero-content h1 {
